--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <a-nft
-            type='nft' url='./trex/book-image/book'
+            type='nft' url='./trex/trex-image/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
         <a-entity
                 gltf-model='./trex/scene.gltf'
-                scale="1 1 1"
+                scale="5 5 5"
                 position="10 20 0"
                 rotation="-90 0 0 "
         >
