--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <a-nft
-            type='nft' url='./trex/trex-image/trex'
+            type='nft' url='./trex/book-image/book'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
         <a-entity
                 gltf-model='./trex/scene.gltf'
