--- a/index.html
+++ b/index.html
@@ -25,7 +25,24 @@
 
     <!-- rawgithack development URL -->
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
-<!--    <script src='../../../../aframe/build/aframe-ar-nft.js'></script>-->
+    <script>
+        AFRAME.registerComponent('rotation-reader', {
+            /**
+             * We use IIFE (immediately-invoked function expression) to only allocate one
+             * vector or euler and not re-create on every tick to save memory.
+             */
+            tick: (function () {
+                var position = new THREE.Vector3();
+                var quaternion = new THREE.Quaternion();
+
+                return function () {
+                    this.el.object3D.getWorldPosition(position);
+                    this.el.object3D.getWorldQuaternion(quaternion);
+                    // position and rotation now contain vector and quaternion in world space.
+                };
+            })()
+        });
+    </script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -46,11 +63,11 @@
                 gltf-model='./trex/scene.gltf'
                 scale="5 5 5"
                 position="150 300 -100"
-                rotation="-20 0 0 "
+                rotation="-10 0 0 "
         >
         </a-entity>
     </a-nft>
-    <a-entity camera></a-entity>
+    <a-entity camera rotation-reader></a-entity>
 </a-scene>
 </body>
 </html>
