--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         >
         </a-entity>
     </a-nft>
-    <a-entity camera rotation-reader></a-entity>
+    <a-entity camera look-controls rotation-reader wasd-controls position="0 1.6 0"></a-entity>
 </a-scene>
 </body>
 </html>
