--- a/index.html
+++ b/index.html
@@ -85,29 +85,29 @@
 <!-- minimal loader shown until image descriptors are loaded -->
 <div class="arjs-loader">
     <div>
-        <!--        Loading, please wait...-->
-        <span style="--i: 1">L</span>
-        <span style="--i: 2">o</span>
-        <span style="--i: 3">a</span>
-        <span style="--i: 4">d</span>
-        <span style="--i: 5">i</span>
-        <span style="--i: 6">n</span>
-        <span style="--i: 7">g</span>
-        <span style="--i: 8">,</span>
-        <span style="--i: 9">p</span>
-        <span style="--i: 10">l</span>
-        <span style="--i: 11">e</span>
-        <span style="--i: 12">a</span>
-        <span style="--i: 13">s</span>
-        <span style="--i: 14">e</span>
-        <span style="--i: 15"> </span>
-        <span style="--i: 16">w</span>
-        <span style="--i: 17">a</span>
-        <span style="--i: 18">i</span>
-        <span style="--i: 19">t</span>
-        <span style="--i: 20">.</span>
-        <span style="--i: 21">.</span>
-        <span style="--i: 22">.</span>
+                Loading, please wait...
+<!--        <span style="&#45;&#45;i: 1">l</span>-->
+<!--        <span style="&#45;&#45;i: 2">o</span>-->
+<!--        <span style="&#45;&#45;i: 3">a</span>-->
+<!--        <span style="&#45;&#45;i: 4">d</span>-->
+<!--        <span style="&#45;&#45;i: 5">i</span>-->
+<!--        <span style="&#45;&#45;i: 6">n</span>-->
+<!--        <span style="&#45;&#45;i: 7">g</span>-->
+<!--        <span style="&#45;&#45;i: 8">,</span>-->
+<!--        <span style="&#45;&#45;i: 9">p</span>-->
+<!--        <span style="&#45;&#45;i: 10">l</span>-->
+<!--        <span style="&#45;&#45;i: 11">e</span>-->
+<!--        <span style="&#45;&#45;i: 12">a</span>-->
+<!--        <span style="&#45;&#45;i: 13">s</span>-->
+<!--        <span style="&#45;&#45;i: 14">e</span>-->
+<!--        <span style="&#45;&#45;i: 15"> </span>-->
+<!--        <span style="&#45;&#45;i: 16">w</span>-->
+<!--        <span style="&#45;&#45;i: 17">a</span>-->
+<!--        <span style="&#45;&#45;i: 18">i</span>-->
+<!--        <span style="&#45;&#45;i: 19">t</span>-->
+<!--        <span style="&#45;&#45;i: 20">.</span>-->
+<!--        <span style="&#45;&#45;i: 21">.</span>-->
+<!--        <span style="&#45;&#45;i: 22">.</span>-->
     </div>
 </div>
 <a-scene
