修改加载动画

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <!-- minimal loader shown until image descriptors are loaded -->
 <div class="arjs-loader">
     <div>
-                Loading, please wait...
+                Loading, please wai...
 <!--        <span style="&#45;&#45;i: 1">l</span>-->
 <!--        <span style="&#45;&#45;i: 2">o</span>-->
 <!--        <span style="&#45;&#45;i: 3">a</span>-->
