修改加载动画

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <!-- minimal loader shown until image descriptors are loaded -->
 <div class="arjs-loader">
     <div>
-        Loading, please wait...
+<!--        Loading, please wait...-->
         <span style="--i: 1">l</span>
         <span style="--i: 2">o</span>
         <span style="--i: 3">a</span>
