修改加载动画

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             font-size: 1.25em;
             color: #fff;
             /* 这是字体的描边第一个值是粗细,第二个值是颜色 */
-            -webkit-text-stroke: 3px #000;
+            -webkit-text-stroke: 3px rgba(0,0,0,0.5);
             /* 单词大写 */
             text-transform: uppercase;
             /* 文字阴影 */
