--- a/index.html
+++ b/index.html
@@ -17,24 +17,29 @@
         }
 
         .arjs-loader div {
-            text-align: center;
-            font-size: 1.25em;
-            color: white;
+            /*text-align: center;*/
+            /*font-size: 1.25em;*/
+            /*color: white;*/
+            /* 弹性布局 让页面的元素垂直+水平居中 */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         .arjs-loader div span {
             /* 这里可以直接使用外部引入的字体样式 */
             font-family: "Titan One";
-            font-size: 1.25em;
+            font-size: 30px;
             color: #fff;
             /* 这是字体的描边第一个值是粗细,第二个值是颜色 */
-            -webkit-text-stroke: 3px rgba(0,0,0,1);
+            -webkit-text-stroke: 3px rgba(0, 0, 0, 0);
             /* 单词大写 */
             text-transform: uppercase;
             /* 文字阴影 */
             text-shadow: 0 0 #f3c623, 0 0 #f2aaaa;
             /* 让文字先向下走自身高度的50%,然后顺时针旋转4度 */
-            transform: translate(0, 30%) rotate(4deg);
+            transform: translate(0, 50%) rotate(4deg);
             /* 动画 名称 时长 第三个值是延迟时长 calc是自动计算的方法,里面写的var()函数是会调用我们事先自定义好的属性值,我们刚才给span添加的--i:*就是一个自定义属性,var()能调用到相应的span的定义好的属性值,然后在*120ms来计算每个文字的延迟时长省时省力,第四个值是两头慢,中间快,第五个值是无线运动 */
             animation: move 2s calc(var(--i) * 120ms) ease-in-out infinite;
         }
@@ -46,7 +51,7 @@
                 text-shadow: 0 0 #f3c623, 0 0 #f2aaaa;
             }
             33.33% {
-                text-shadow: 0 60px #f37121, 0 120px #f2aaaa;
+                text-shadow: 0 40px #f37121, 0 60px #f2aaaa;
             }
             50% {
                 text-shadow: 0 0 #8fc0a9, 0 0 #84a9ac;
@@ -54,7 +59,7 @@
                 transform: translate(0, -50%) rotate(-4deg);
             }
             66.66% {
-                text-shadow: 0 -60px #d54062, 0 -120px #8fc0a9;
+                text-shadow: 0 -40px #d54062, 0 -60px #8fc0a9;
             }
         }
     </style>
@@ -85,7 +90,7 @@
 <!-- minimal loader shown until image descriptors are loaded -->
 <div class="arjs-loader">
     <div>
-<!--        Loading, please wait...-->
+        <!--        Loading, please wait...-->
         <span style="--i: 1">l</span>
         <span style="--i: 2">o</span>
         <span style="--i: 3">a</span>
