--- a/index.html
+++ b/index.html
@@ -1,68 +1,7 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>
-
-    <style>
-        .arjs-loader {
-            height: 100%;
-            width: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: rgba(0, 0, 0, 0.8);
-            z-index: 9999;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .arjs-loader div {
-            /*text-align: center;*/
-            /*font-size: 1.25em;*/
-            /*color: white;*/
-            /* 弹性布局 让页面的元素垂直+水平居中 */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .arjs-loader div span {
-            /* 这里可以直接使用外部引入的字体样式 */
-            font-family: "Titan One";
-            font-size: 30px;
-            color: #fff;
-            /* 这是字体的描边第一个值是粗细,第二个值是颜色 */
-            -webkit-text-stroke: 3px rgba(0, 0, 0, 0);
-            /* 单词大写 */
-            text-transform: uppercase;
-            /* 文字阴影 */
-            text-shadow: 0 0 #f3c623, 0 0 #f2aaaa;
-            /* 让文字先向下走自身高度的50%,然后顺时针旋转4度 */
-            transform: translate(0, 50%) rotate(4deg);
-            /* 动画 名称 时长 第三个值是延迟时长 calc是自动计算的方法,里面写的var()函数是会调用我们事先自定义好的属性值,我们刚才给span添加的--i:*就是一个自定义属性,var()能调用到相应的span的定义好的属性值,然后在*120ms来计算每个文字的延迟时长省时省力,第四个值是两头慢,中间快,第五个值是无线运动 */
-            animation: move 2s calc(var(--i) * 120ms) ease-in-out infinite;
-        }
-
-        /* 定义动画 */
-        @keyframes move {
-            0%,
-            100% {
-                text-shadow: 0 0 #f3c623, 0 0 #f2aaaa;
-            }
-            33.33% {
-                text-shadow: 0 40px #f37121, 0 60px #f2aaaa;
-            }
-            50% {
-                text-shadow: 0 0 #8fc0a9, 0 0 #84a9ac;
-                /* 这个跟刚才写的刚好相反动画到一半向上走自身的一半,逆时针旋转4度 */
-                transform: translate(0, -50%) rotate(-4deg);
-            }
-            66.66% {
-                text-shadow: 0 -40px #d54062, 0 -60px #8fc0a9;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./css/index.css">
 
     <!-- rawgithack development URL -->
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
@@ -87,7 +26,12 @@
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
-<!-- minimal loader shown until image descriptors are loaded -->
+
+<nav>
+    <div class="logo"></div>
+</nav>
+
+<!--加载动画效果-->
 <div class="arjs-loader">
     <div>
         <!--        Loading, please wait...-->
