--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 
     <!-- rawgithack development URL -->
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
+    <!-- 手势检测js -->
+    <script src="./script/gesture-detector.js"></script>
+    <script src="./script/gesture-handler.js"></script>
+
     <script>
         AFRAME.registerComponent('rotation-reader', {
             /**
@@ -26,12 +30,12 @@
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
-
+<!-- 导航栏 -->
 <nav>
     <div class="logo"></div>
 </nav>
 
-<!--加载动画效果-->
+<!-- 加载动画效果 -->
 <div class="arjs-loader">
     <div>
         <!--        Loading, please wait...-->
@@ -47,20 +51,36 @@
         <span style="--i: 10">.</span>
     </div>
 </div>
+
+<!-- 图像追踪 -->
 <a-scene
-        vr-mode-ui='enabled: false;'
+        arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'
+        embedded
         renderer="logarithmicDepthBuffer: true; precision: medium;"
-        embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
+        vr-mode-ui="enabled: false;"
+        gesture-detector
+        id="scene"
+>
 
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <a-nft
-            type='nft' url='./trex/book-image/book'
-            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
+            type="nft"
+            url="./trex/trex-image/trex"
+            smooth="true"
+            smoothCount="10"
+            smoothTolerance="0.01"
+            smoothThreshold="5"
+            raycaster="objects: .clickable"
+            emitevents="true"
+            cursor="fuse: false; rayOrigin: mouse;"
+    >
         <a-entity
                 gltf-model='./trex/scene.gltf'
                 scale="5 5 5"
                 position="150 300 -100"
                 rotation="-10 0 0 "
+                class="clickable"
+                gesture-handlerr="minScale: 0.25; maxScale: 10"
         >
         </a-entity>
     </a-nft>
