--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
             cursor="fuse: false; rayOrigin: mouse;"
     >
         <a-entity
-                gltf-model='./trex/scene.gltf'
+                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
                 scale="5 5 5"
-                position="150 300 -100"
-                rotation="-10 0 0 "
+                position="50 150 0"
                 class="clickable"
                 gesture-handlerr="minScale: 0.25; maxScale: 10"
         >
+<!--            rotation="-10 0 0 " -->
         </a-entity>
     </a-nft>
     <a-entity camera look-controls rotation-reader wasd-controls position="0 1.6 0"></a-entity>
