--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>
-    <link rel="stylesheet" href="./css/index.css">
-
     <!-- rawgithack development URL -->
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
+    <link rel="stylesheet" href="./css/index.css">
     <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
     <script src="./script/gesture-handler.js"></script>
@@ -56,7 +55,7 @@
 <a-scene
         arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'
         embedded
-        renderer="logarithmicDepthBuffer: true; precision: medium;"
+        renderer="logarithmicDepthBuffer: true;"
         vr-mode-ui="enabled: false;"
         gesture-detector
         id="scene"
@@ -81,10 +80,10 @@
                 class="clickable"
                 gesture-handlerr="minScale: 0.25; maxScale: 10"
         >
-<!--            rotation="-10 0 0 " -->
+            <!--            rotation="-10 0 0 " -->
         </a-entity>
     </a-nft>
-    <a-entity camera look-controls rotation-reader wasd-controls position="0 1.6 0"></a-entity>
+    <a-entity camera></a-entity>
 </a-scene>
 </body>
 </html>
