--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 scale="5 5 5"
                 position="50 150 0"
                 class="clickable"
-                gesture-handlerr="minScale: 0.25; maxScale: 10"
+                gesture-handlerr
         >
             <!--            rotation="-10 0 0 " -->
         </a-entity>
