--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>
     <!-- rawgithack development URL -->
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
+<!--    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>-->
     <link rel="stylesheet" href="./css/index.css">
     <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
@@ -60,35 +61,33 @@
         gesture-detector
         id="scene"
 >
-    <a-entity
-            gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
-            scale="5 5 5"
-            position="50 150 0"
-            class="clickable"
-            gesture-handler="minScale: 0.25; maxScale: 10"
-    >
-    </a-entity>
-    <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
-    <a-nft
-            type="nft"
-            url="./trex/trex-image/trex"
-            smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;"
-    >
         <a-entity
                 gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
                 scale="5 5 5"
                 position="50 150 0"
-                class="clickable"
-                gesture-handler="minScale: 0.25; maxScale: 10"
         >
         </a-entity>
-    </a-nft>
+    <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
+<!--    <a-nft-->
+<!--            type="nft"-->
+<!--            url="./trex/trex-image/trex"-->
+<!--            smooth="true"-->
+<!--            smoothCount="10"-->
+<!--            smoothTolerance="0.01"-->
+<!--            smoothThreshold="5"-->
+<!--            raycaster="objects: .clickable"-->
+<!--            emitevents="true"-->
+<!--            cursor="fuse: false; rayOrigin: mouse;"-->
+<!--    >-->
+<!--        <a-entity-->
+<!--                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'-->
+<!--                scale="5 5 5"-->
+<!--                position="50 150 0"-->
+<!--                class="clickable"-->
+<!--                gesture-handler="minScale: 0.25; maxScale: 10"-->
+<!--        >-->
+<!--        </a-entity>-->
+<!--    </a-nft>-->
     <a-entity camera></a-entity>
 </a-scene>
 </body>
