--- a/index.html
+++ b/index.html
@@ -89,20 +89,26 @@
 <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="./script/gesture-detector.js"></script>
+    <script src="./script/gesture-handler.js"></script>
 </head>
 <body>
 <a-scene>
-<!--    <a-box color="red" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>-->
+    <!--    <a-box color="red" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>-->
     <a-entity
             gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
             scale="5 5 5"
             position="60 150 0"
+            class="clickable"
+            gesture-handler
     >
     </a-entity>
     <a-entity
             gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
             scale="5 5 5"
             position="50 150 0"
+            class="clickable"
+            gesture-handler
     >
     </a-entity>
 
