--- a/index.html
+++ b/index.html
@@ -1,116 +1,87 @@
-<!--<html>-->
-<!--<head>-->
-<!--    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>-->
-<!--    &lt;!&ndash; rawgithack development URL &ndash;&gt;-->
-<!--    <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>-->
-<!--    <link rel="stylesheet" href="./css/index.css">-->
-<!--    &lt;!&ndash; 手势检测js &ndash;&gt;-->
-<!--    <script src="./script/gesture-detector.js"></script>-->
-<!--    <script src="./script/gesture-handler.js"></script>-->
-
-<!--    <script>-->
-<!--        AFRAME.registerComponent('rotation-reader', {-->
-<!--            /**-->
-<!--             * We use IIFE (immediately-invoked function expression) to only allocate one-->
-<!--             * vector or euler and not re-create on every tick to save memory.-->
-<!--             */-->
-<!--            tick: (function () {-->
-<!--                var position = new THREE.Vector3();-->
-<!--                var quaternion = new THREE.Quaternion();-->
-
-<!--                return function () {-->
-<!--                    this.el.object3D.getWorldPosition(position);-->
-<!--                    this.el.object3D.getWorldQuaternion(quaternion);-->
-<!--                    // position and rotation now contain vector and quaternion in world space.-->
-<!--                };-->
-<!--            })()-->
-<!--        });-->
-<!--    </script>-->
-<!--</head>-->
-
-<!--<body style='margin : 0px; overflow: hidden;'>-->
-<!--&lt;!&ndash; 导航栏 &ndash;&gt;-->
-<!--<nav>-->
-<!--    <div class="logo"></div>-->
-<!--</nav>-->
-
-<!--&lt;!&ndash; 加载动画效果 &ndash;&gt;-->
-<!--<div class="arjs-loader">-->
-<!--    <div>-->
-<!--        &lt;!&ndash;        Loading, please wait...&ndash;&gt;-->
-<!--        <span style="&#45;&#45;i: 1">l</span>-->
-<!--        <span style="&#45;&#45;i: 2">o</span>-->
-<!--        <span style="&#45;&#45;i: 3">a</span>-->
-<!--        <span style="&#45;&#45;i: 4">d</span>-->
-<!--        <span style="&#45;&#45;i: 5">i</span>-->
-<!--        <span style="&#45;&#45;i: 6">n</span>-->
-<!--        <span style="&#45;&#45;i: 7">g</span>-->
-<!--        <span style="&#45;&#45;i: 8">.</span>-->
-<!--        <span style="&#45;&#45;i: 9">.</span>-->
-<!--        <span style="&#45;&#45;i: 10">.</span>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--&lt;!&ndash; 图像追踪 &ndash;&gt;-->
-<!--<a-scene-->
-<!--        arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'-->
-<!--        embedded-->
-<!--        renderer="logarithmicDepthBuffer: true;"-->
-<!--        vr-mode-ui="enabled: false;"-->
-<!--        gesture-detector-->
-<!--        id="scene"-->
-<!--&gt;-->
-<!--    &lt;!&ndash; use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) &ndash;&gt;-->
-<!--    <a-nft-->
-<!--            type="nft"-->
-<!--            url="./trex/trex-image/trex"-->
-<!--            smooth="true"-->
-<!--            smoothCount="10"-->
-<!--            smoothTolerance="0.01"-->
-<!--            smoothThreshold="5"-->
-<!--            raycaster="objects: .clickable"-->
-<!--            emitevents="true"-->
-<!--            cursor="fuse: false; rayOrigin: mouse;"-->
-<!--    >-->
-<!--        <a-entity-->
-<!--                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'-->
-<!--                scale="5 5 5"-->
-<!--                position="50 150 0"-->
-<!--                class="clickable"-->
-<!--                gesture-handler="minScale: 0.25; maxScale: 10"-->
-<!--        >-->
-<!--        </a-entity>-->
-<!--    </a-nft>-->
-<!--    <a-entity camera></a-entity>-->
-<!--</a-scene>-->
-<!--</body>-->
-<!--</html>-->
 <html>
 <head>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>
+    <!-- rawgithack development URL -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
+    <link rel="stylesheet" href="./css/index.css">
+    <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
     <script src="./script/gesture-handler.js"></script>
+
+    <script>
+        AFRAME.registerComponent('rotation-reader', {
+            /**
+             * We use IIFE (immediately-invoked function expression) to only allocate one
+             * vector or euler and not re-create on every tick to save memory.
+             */
+            tick: (function () {
+                var position = new THREE.Vector3();
+                var quaternion = new THREE.Quaternion();
+
+                return function () {
+                    this.el.object3D.getWorldPosition(position);
+                    this.el.object3D.getWorldQuaternion(quaternion);
+                    // position and rotation now contain vector and quaternion in world space.
+                };
+            })()
+        });
+    </script>
 </head>
-<body>
-<a-scene gesture-detector id="scene">
-    <!--    <a-box color="red" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>-->
-    <a-entity
-            gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
-            scale="5 5 5"
-            position="60 150 0"
-            class="clickable"
-            gesture-handler
+
+<body style='margin : 0px; overflow: hidden;'>
+<!-- 导航栏 -->
+<nav>
+    <div class="logo"></div>
+</nav>
+
+<!-- 加载动画效果 -->
+<div class="arjs-loader">
+    <div>
+        <!--        Loading, please wait...-->
+        <span style="--i: 1">l</span>
+        <span style="--i: 2">o</span>
+        <span style="--i: 3">a</span>
+        <span style="--i: 4">d</span>
+        <span style="--i: 5">i</span>
+        <span style="--i: 6">n</span>
+        <span style="--i: 7">g</span>
+        <span style="--i: 8">.</span>
+        <span style="--i: 9">.</span>
+        <span style="--i: 10">.</span>
+    </div>
+</div>
+
+<!-- 图像追踪 -->
+<a-scene
+        arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'
+        embedded
+        renderer="logarithmicDepthBuffer: true;"
+        vr-mode-ui="enabled: false;"
+        gesture-detector
+        id="scene"
+>
+    <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
+    <a-nft
+            type="nft"
+            url="./trex/trex-image/trex"
+            smooth="true"
+            smoothCount="10"
+            smoothTolerance="0.01"
+            smoothThreshold="5"
+            raycaster="objects: .clickable"
+            emitevents="true"
+            cursor="fuse: false; rayOrigin: mouse;"
     >
-    </a-entity>
-    <a-entity
-            gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
-            scale="5 5 5"
-            position="50 150 0"
-            class="clickable"
-            gesture-handler
-    >
-    </a-entity>
+        <a-entity
+                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
+                scale="5 5 5"
+                position="50 150 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10"
+        >
+        </a-entity>
+    </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
 </body>
