添加模型控制

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- rawgithack development URL -->
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
     <script src="./script/gesture-handler.js"></script>
@@ -83,5 +84,10 @@
     </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
+
+<div class="container">
+    <a href="#" class="btn btn_facebook"><i class="fa-solid fa-bars"></i></a>
+</div>
+
 </body>
 </html>
