--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
+
 <head>
+    <meta charset="UTF-8"/>
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>
     <!-- rawgithack development URL -->
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
-    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="./css/index.css">
     <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
     <script src="./script/gesture-handler.js"></script>
@@ -27,6 +30,7 @@
             })()
         });
     </script>
+    <title>webAR</title>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -85,8 +89,55 @@
     <a-entity camera></a-entity>
 </a-scene>
 
+<!--<div class="swiper">-->
+<!--    &lt;!&ndash; Additional required wrapper &ndash;&gt;-->
+<!--    <div class="swiper-wrapper">-->
+<!--        &lt;!&ndash; Slides &ndash;&gt;-->
+<!--        <div class="swiper-slide swiper-slide-1">1</div>-->
+<!--        <div class="swiper-slide swiper-slide-2">2</div>-->
+<!--        <div class="swiper-slide swiper-slide-3">3</div>-->
+<!--        <div class="swiper-slide swiper-slide-4">4</div>-->
+<!--        <div class="swiper-slide swiper-slide-5">5</div>-->
+<!--    </div>-->
+
+<!--    <div class="swiper-pagination"></div>-->
+<!--    <div class="swiper-button-prev"></div>-->
+<!--    <div class="swiper-button-next"></div>-->
+<!--</div>-->
+
+<!--&lt;!&ndash; 轮播器js &ndash;&gt;-->
+<!--<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>-->
+<!--<script>-->
+<!--    const swiper = new Swiper('.swiper', {-->
+<!--        effect: 'coverflow',-->
+<!--        loop: true,-->
+<!--        grabCursor: true,-->
+<!--        centeredSlides: true,-->
+<!--        slidesPerView: 'auto',-->
+<!--        coverflowEffect: {-->
+<!--            rotate: 0,-->
+<!--            stretch: 0,-->
+<!--            depth: 150,-->
+<!--            modifier: 1,-->
+<!--            slideShadows: false,-->
+<!--        },-->
+<!--        pagination: {-->
+<!--            el: '.swiper-pagination',-->
+<!--        },-->
+<!--        navigation: {-->
+<!--            nextEl: '.swiper-button-next',-->
+<!--            prevEl: '.swiper-button-prev',-->
+<!--        },-->
+<!--    });-->
+
+<!--    // 监听改变事件-->
+<!--    swiper.on('slideChange', (e) => {-->
+<!--        console.log(e.realIndex);-->
+<!--    });-->
+<!--</script>-->
+
 <div class="container">
-    <a href="#" class="btn btn_facebook"><i class="fa-solid fa-bars"></i></a>
+    <a href="javascript:void(0)" class="btn btn_facebook"><i class="fa fa-instagram"></i></a>
 </div>
 
 </body>
