添加轮播器

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <title>webAR</title>
 </head>
 
-<body style='margin : 0px; overflow: hidden;'>
+<body>
 <!-- 导航栏 -->
 <nav>
     <div class="logo"></div>
