--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
         >
         </a-entity>
     </a-nft>
-    <a-entity camera></a-entity>
+    <a-entity camera look-controls>
+        <a-entity geometry="primitive: plane; height: 0.2; width: 0.2" position="0 0 -1"
+                  material="color: gray; opacity: 0.5"></a-entity>
+    </a-entity>
 </a-scene>
 
 <div class="my_swiper" id="my_swiper">
