添加轮播器

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <a-nft
             type="nft"
             url="./trex/trex-image/trex"
-            smooth="true"
+            smooth="false"
             smoothCount="10"
             smoothTolerance="0.01"
             smoothThreshold="5"
