添加轮播器

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <a-nft
             type="nft"
             url="./trex/trex-image/trex"
-            smooth="false"
-            smoothCount="10"
+            smooth="true"
+            smoothCount="20"
             smoothTolerance="0.01"
-            smoothThreshold="5"
+            smoothThreshold="10"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
