添加轮播器

--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
             } else {
                 btn.style.background = "linear-gradient(90deg, #fa7199, #f5ce62, #e43603, #fa7199)";
                 btn.style.backgroundSize = "400%";
+                if (my_swiper.style.marginLeft === "") {
+                    offw = document.body.offsetWidth;
+                    innerw = window.innerWidth;
+                    marginL = Math.ceil((offw - innerw) / 2);
+                    my_swiper.style.marginLeft = marginL.toString();
+                }
                 my_swiper.style.display = "block";
             }
         }
