添加轮播器

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no">
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>
     <!-- rawgithack development URL -->
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
@@ -148,6 +149,8 @@
         let my_swiper = document.getElementById("my_swiper")
         let innerw = window.innerWidth;
         let offw = document.body.offsetWidth;
+        console.log("innerw:", innerw);
+        console.log("offw:", offw);
         btn.onclick = function () {
             if (btn.style.backgroundSize === "400%") {
                 btn.style.backgroundcolor = "#fff";
@@ -157,7 +160,10 @@
                 btn.style.background = "linear-gradient(90deg, #fa7199, #f5ce62, #e43603, #fa7199)";
                 btn.style.backgroundSize = "400%";
                 if (innerw < 1025) {
+                    console.log("innerw:", innerw);
+                    console.log("offw:", offw);
                     let marginL = Math.ceil((offw - innerw) / 2);
+                    console.log("margin:", marginL);
                     my_swiper.style.marginLeft = marginL.toString();
                     console.log("margin:", marginL);
                 }
