添加包装展示

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     imgs[i].setAttribute("src", "images/box/left" + obj_id + ".jpg");
                 }
             }
-            slide_sec2.style.setProperty("background-image", "url('./images/bg" + obj_id + ".png')", "important")
+            slide_sec2.style.setProperty("background-image", "url('./images/box/bg" + obj_id + ".png')", "important")
             slide_sec1.style.setProperty('visibility', 'visible', 'important');
         }
     </script>
